# text-clock

./: CMakeLists.txt  README.md  sdkconfig
application/: application.cpp  application.hpp
components/board/: CMakeLists.txt  board.cpp  board_display.cpp  board_display.hpp  board_wifi.cpp
components/board/interface/: itf_board.hpp  itf_display.hpp  itf_wifi.hpp
components/devices/: CMakeLists.txt
components/devices/addressable_led/: addressable_led.hpp
components/modules/: CMakeLists.txt
components/modules/color/: color.hpp
components/modules/nettime/: nettime.cpp  nettime.hpp
main/: CMakeLists.txt  app_system_init.cpp  app_system_init.hpp  main.cpp  system.cpp  system.hpp
